--- a/www/css/index.css
+++ b/www/css/index.css
@@ -22,3 +22,23 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
+
+.preload_bg{
+    background:#fff;
+    width:100%;
+    height:100%;
+    position:fixed;
+    z-index:99;
+    top:0;
+    bottom:0;
+}
+.loading_ani{
+    width:128px;
+    height:15px;
+    background:url(../img/ajax-loader.gif) no-repeat;
+    position:fixed;
+    margin-left:50%;
+    margin-right:50%;
+    left:-64px;
+    margin-top:310px;
+}
